# torch_backend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  OWNERS  README.md  generate_code.sh  pytest.ini  requirements.txt  setup.py
backends/npu/: CMakeLists.txt
backends/npu/acl/libs/: CMakeLists.txt  acl.cpp  acl_rt.cpp
backends/npu/adapter/: acl_device_adapter.cpp  acl_device_adapter.h
backends/npu/aten/: AclOpsInterface.h  OpApiInterface.h  OpInterface.cpp  OpInterface.h  SparseOpsInterface.h
backends/npu/aten/common/: ChangeDataPtr.cpp  CopyKernel.cpp  CopyKernelNpu.cpp  CopyMemoryKernel.cpp  FormatCastHelper.cpp  FormatCastHelper.h  FormatCastKernelNpu.cpp  InnerNpuNativeFunction.h  LocalScalarDenseNpu.cpp  MatmulByBmmV2KernelNpu.cpp  NpuFastReshape.cpp  ResizeNpu.cpp  ResizeNpu.h  SetNpu.cpp  SetNpu.h  StorageSizeNpu.cpp  TensorFactories.cpp  TensorFactories.h  TensorProperties.cpp  TensorShape.cpp  ToKernelNpu.cpp  from_blob.cpp  from_blob.h
backends/npu/aten/mirror/: NPUMemoryOverlap.cpp  NPUMemoryOverlap.h  NPUTensorIterator.cpp  NPUTensorIterator.h  NPUTypeProperties.cpp  NPUTypeProperties.h
backends/npu/aten/ops/: CopyFromAndResizeKernelNpu.cpp  FlattenDenseTensorsKernelNpu.cpp  FullKernelNpu.cpp  StreamAndEventKernelNpu.cpp
backends/npu/aten/ops/base/aclops/: AbsKernelNpu.cpp  AcosKernelNpu.cpp  AcoshKernelNpu.cpp  AdaptiveAvgPool1dKernelNpu.cpp  AdaptiveAvgPool2dBackwardKernelNpu.cpp  AdaptiveAvgPool2dKernelNpu.cpp  AdaptiveAvgPool3dBackwardKernelNpu.cpp  AdaptiveAvgPool3dKernelNpu.cpp  AdaptiveMaxPool2dBackwardKernelNpu.cpp  AdaptiveMaxPool2dKernelNpu.cpp  AddKernelNpu.cpp  AddLayerNormBackwardKernelNpu.cpp  AddLayerNormNpu.cpp  AddReluKernelNpu.cpp  AddRmsNormKernelNpu.cpp  AddbmmKernelNpu.cpp  AddcdivKernelNpu.cpp  AddcmulKernelNpu.cpp  AddmmKernelNpu.cpp  AddmvKernelNpu.cpp  AddrKernelNpu.cpp  AffineGridGeneratorBackwardKernelNpu.cpp  AffineGridGeneratorKernelNpu.cpp  AllKernelNpu.cpp  AmpForeachNonFiniteCheckAndUnscaleKernelNpu.cpp  AnchorResponseFlagsKernelNpu.cpp  AnyKernelNpu.cpp  ApplyAdamKernelNpu.cpp  ApplyAdamWKernelNpu.cpp  ArangeKernelNpu.cpp  ArgmaxKernelNpu.cpp  ArgminKernelNpu.cpp  ArgsortKernelNpu.cpp  AsStridedKernelNpu.cpp  AsinKernelNpu.cpp  AsinhKernelNpu.cpp  Atan2KernelNpu.cpp  AtanKernelNpu.cpp  AtanhKernelNpu.cpp  AvgPool2dBackwardKernelNpu.cpp  (+358 more)
backends/npu/aten/ops/base/opapi/: AbsKernelNpuOpApi.cpp  AcosKernelNpuOpApi.cpp  AcoshKernelNpuOpApi.cpp  AdaptiveAvgPool2dBackwardKernelNpuOpApi.cpp  AdaptiveAvgPool2dKernelNpuOpApi.cpp  AdaptiveAvgPool3dBackwardKernelNpuOpApi.cpp  AdaptiveMaxPool2dKernelNpuOpApi.cpp  AddKernelNpuOpApi.cpp  AddLayerNormBackwardKernelNpuOpApi.cpp  AddLayerNormKernelNpuOpApi.cpp  AddRmsNormKernelOpApi.cpp  AddbmmKernelNpuOpApi.cpp  AddcdivKernelNpuOpApi.cpp  AddcmulKernelNpuOpApi.cpp  AddmmKernelNpuOpApi.cpp  AddmvKernelNpuOpApi.cpp  AddrKernelNpuOpApi.cpp  AffineGridGeneratorKernelNpuOpApi.cpp  AllGatherBaseMatmulKernelNpuOpApi.cpp  AllKernelNpuOpApi.cpp  AmaxKernelNpuOpApi.cpp  AminKernelNpuOpApi.cpp  AminmaxKernelNpuOpApi.cpp  AmpForeachNonFiniteCheckAndUnscaleKernelNpuOpApi.cpp  AngleKernelNpuOpApi.cpp  AntiQuantKernelNpuOpApi.cpp  AnyKernelNpuOpApi.cpp  ApplyRotaryPosEmbNpuOpApi.cpp  ArangeKernelNpuOpApi.cpp  ArgSortKernelNpuOpApi.cpp  ArgmaxKernelNpuOpApi.cpp  ArgminKernelNpuOpApi.cpp  AsinKernelNpuOpApi.cpp  AsinhKernelNpuOpApi.cpp  Atan2KernelNpuOpApi.cpp  AtanKernelNpuOpApi.cpp  AtanhKernelNpuOpApi.cpp  AvgPool2dBackwardKernelNpuOpApi.cpp  AvgPool2dKernelNpuOpApi.cpp  BaddbmmKernelNpuOpApi.cpp  (+299 more)
backends/npu/aten/ops/latest/aclops/: BatchNormKernelNpu.cpp  BmmV2KernelNpu.cpp  CatKernelNpu.cpp  ConfusionTransposeKernelNpu.cpp  ConjKernelNpu.cpp  ConvolutionKernelNpu.cpp  EmbeddingBackwardKernelNpu.cpp  EmbeddingBagBackwardKernelNpu.cpp  EmbeddingKernelNpu.cpp  GeluBackwardKernelNpu.cpp  (+31 more)
backends/npu/aten/utils/: AdvancedIndex.cpp  AdvancedIndex.h  KernelNpuOutputSize.cpp  KernelNpuOutputSize.h  OpAdapter.h  OpUtils.cpp  OpUtils.h  op_api_common.h  ops.cpp  ops.h
backends/npu/core/: DeviceUtils.h  NPUBridge.cpp  NPUBridge.h  NPUException.cpp  NPUException.h  NPUFormat.cpp  NPUFormat.h  NPUPeerToPeerAccess.cpp  NPUPeerToPeerAccess.h  NPUQueue.cpp  NPUQueue.h  NpuDeviceRAII.cpp  NpuDeviceRAII.h  NpuVariables.cpp  OverflowUtils.cpp  OverflowUtils.h  npu_log.h
backends/npu/core/interface/: AsyncTaskQueueInterface.cpp  AsyncTaskQueueInterface.h  HcclInterface.cpp  HcclInterface.h
backends/npu/core/register/: FunctionLoader.cpp  FunctionLoader.h  OptionRegister.cpp  OptionsManager.cpp  OptionsManager.h
backends/npu/framework/: FormatHelper.cpp  FormatHelper.h  InferFormat.cpp  InferFormat.h  NPUDefine.cpp  NPUDefine.h  OpCmdHelper.cpp  OpCmdHelper.h  OpCommand.cpp  OpCommand.h  OpParamMaker.cpp  OpParamMaker.h  StorageDescHelper.cpp  StorageDescHelper.h
backends/npu/framework/autograd/: FunctionsManual.cpp  FunctionsManual.h  VariableTypeManual.cpp
backends/npu/framework/contiguous/: ContiguousOpt.cpp  ContiguousOpt.h  ContiguousUtils.cpp  ContiguousUtils.h  ReshapeOpt.cpp  ReshapeOpt.h  broadcast_opt.cpp  combined_opt.cpp  contiguous_register.h  indexing_opt.cpp  permute_opt.cpp  reshapeV2_opt.cpp  reshape_opt.cpp  select_opt.cpp  slice_opt.cpp
backends/npu/framework/interface/: AclOpCompileInterface.cpp  AclOpCompileInterface.h  EnvVariables.cpp  HcclInterface.cpp  HcclInterface.h  LibAscendHal.cpp  MsProfilerInterface.cpp  MsProfilerInterface.h
backends/npu/framework/utils/: CalcuOpUtil.cpp  CalcuOpUtil.h  ForceAclnnList.cpp  ForceJitCompileList.cpp  InternalFormatOpAdapter.h  NPUDefinition.h  NpuStorageOffsetGuard.h  NpuUtils.cpp  NpuUtils.h  OpAdapter.h  OpPreparation.cpp  OpPreparation.h  RandomOpAdapter.h  UtilForOpAdapter.h
test/cpp/: CMakeLists.txt
test/cpp/api/: modules.cpp
test/cpp/aten/: CMakeLists.txt  npu_generator_test.cpp
test/cpp/backend/: CMakeLists.txt  context_test.cpp  generator_test.cpp
test/cpp/core/: CMakeLists.txt  device.cpp  exception_test.cpp
test/cpp/npu/: CMakeLists.txt  npu_context_test.cpp  npu_generator_test.cpp
(+1611 files in other folders)
